(Partially) Fixed menu goes off-screen

--- a/contextmenu.css
+++ b/contextmenu.css
@@ -106,4 +106,5 @@
 
 .menu-shortcut {
 	float: right;
+	opacity: 0.7;
 }
